0030638: Visualization, TKOpenGl - load OpenGL 4.5 functions within OpenGl_Context